sw/qa/uitest/chapterNumbering/tdf145215.py
@@ -1,0 +1,43 @@
+# -*- tab-width: 4; indent-tabs-mode: nil; py-indent-offset: 4 -*-
+#
+# This Source Code Form is subject to the terms of the Mozilla Public
+# License, v. 2.0. If a copy of the MPL was not distributed with this
+# file, You can obtain one at http://mozilla.org/MPL/2.0/.
+#
+
+from uitest.framework import UITestCase
+from uitest.uihelper.common import get_url_for_data_file, get_state_as_dict
+
+class Tdf145215(UITestCase):
+
+    def test_tdf145215(self):
+        writer_doc = self.ui_test.load_file(get_url_for_data_file("tdf145215.docx"))
+
+        self.ui_test.execute_dialog_through_command(".uno:ChapterNumberingDialog")
+        xDialog = self.xUITest.getTopFocusWindow()
+        xTab = xDialog.getChild("tabcontrol")
+
+        # Select level "4"
+        xLevel = xDialog.getChild("level")
+        xLevel2 = xLevel.getChild("3")
+        xLevel2.executeAction("SELECT", tuple())
+        xEntryText = get_state_as_dict(xLevel)['SelectEntryText']
+
+        # Check value for show upper levels
+        xSubLevels = xDialog.getChild("sublevelsnf")
+        xText = get_state_as_dict(xSubLevels)["Text"]
+
+        xokbtn = xDialog.getChild("ok")
+        self.ui_test.close_dialog_through_button(xokbtn)
+
+        self.assertEqual("4", xEntryText)
+        self.assertEqual("1", xText)
+
+        # Check field value (there is only one field)
+        textfields = writer_doc.getTextFields()
+        for textfield in textfields:
+            self.assertTrue(textfield.supportsService("com.sun.star.text.TextField.GetReference"))
+            self.assertEqual(textfield.CurrentPresentation, "1.2.1(i)")
+
+        self.ui_test.close_doc()
+# vim: set shiftwidth=4 softtabstop=4 expandtab:
